# toc-maker

./: .gitignore  Cargo.toml  notes  notes.txt
.github/workflows/: rust.yml
src/: alignment.rs  asset_collector.rs  config.rs  helpers.rs  io_package.rs  io_toc.rs  main.rs  metadata.rs  platform.rs  string.rs  toc_factory.rs
